--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     {% include 'navbar.html' %}
+
     <div class="container">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <strong>Error:</strong> {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
       {% block content %}
       {% endblock %}
     </div>
