--- a/website/templates/add_personalinfo.html
+++ b/website/templates/add_personalinfo.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-6">
             <h1>Add Personal Information</h1>
-            <form method="POST" action="{% url 'add_profileinfo' %}" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'add_personalinfo' %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row mb-3">
                     <div class="col">
