Refactored home page. Added login to navbar. Redirect to user profile page.

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -5,27 +5,30 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+      <div class="navbar-nav ms-auto"> <!-- Add ms-auto here -->
         {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-        </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">
+              <button type="submit" class="btn btn-secondary">Logout</button>
+            </a>
+          </li>
         {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Login</a>
-        </li>
-        {% endif %}
+            <!-- Login form -->
+            <form method="POST" action="{% url 'login' %}" class="d-flex">
+              {% csrf_token %}
+              <div class="input-group">
+                <div>
+                  <input type="text" name="username" placeholder="Username" required class="form-control" aria-label="Username">
+                </div>
+                <div class="mx-2">
+                  <input type="password" name="password" placeholder="Password" required class="form-control" aria-label="Password">
+                </div>
+                <button type="submit" class="btn btn-secondary">Login</button>
+              </div>
+            </form>
 
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        {% endif %}
+      </div>
     </div>
   </div>
 </nav>
