--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,23 +2,8 @@
 
 {% block content %}
 <div class="col-md6 offset-md-3">
-    {% if user.is_authenticated %}
-    <h1>content here</h1>
-    {% else %}
-    <div class="mt-5">
-        <H1>Login</H1>
-        <form method="POST" action="{% url 'home' %}">
-            {% csrf_token %}
-            <div class="mb-3">
-                <input type="text" name="username" placeholder="Username" required class="form-control">
-            </div>
-            <div class="mb-3">
-                <input type="password" name="password" placeholder="Password" required class="form-control">
-            </div>
-            <button type="submit" class="btn btn-secondary">Login</button>
-        </form>
-    </div>
-
+    <br /><br />
+    Home page content here
 </div>
-{% endif %}
+
 {% endblock %}
