The user can now search skill and add them to user skill table.

--- a/website/templates/skill_search.html
+++ b/website/templates/skill_search.html
@@ -10,8 +10,7 @@
                       {{ skill.skill }}
                     </div>
                     <div class="col">
-                      <button type="button" class="btn btn-primary"
-                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+                        <button type="button" class="btn btn-primary" hx-post="{% url 'add_user_skill' skill.pk skill.skill %}">Add</button>
                     </div>
                   </div>
                 </div>
