--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -32,7 +32,13 @@
               <h3>Skills</h3>
             </div>
             <div class="card-body">
-              <p class="card-text">Python PHP Java MySQL React</p>
+                <div class="container text-center">
+                  <div class="row row-cols-4">
+                    {% for skill in uskills %}
+                      <div class="col">{{ skill.skill_name }}</div>
+                    {% endfor %}
+                  </div>
+                </div>
               <div class="d-flex" role="search">
                 <input class="form-control me-2"
                        type="search"
