--- a/website/templates/skill_search.html
+++ b/website/templates/skill_search.html
@@ -1,4 +1,23 @@
 <div>
+        <div class="card-body">
+                <div class="container text-center">
+                  <div class="row row-cols-4">
+                    {% for skill in uskills %}
+                      <div class="col">{{ skill.skill_name }}</div>
+                    {% endfor %}
+                  </div>
+                </div>
+              <div class="d-flex" role="search">
+                <input class="form-control me-2"
+                       type="search"
+                       name="skill_input" placeholder="Search skill"
+                       hx-get="/skill_search"
+                       hx-trigger="input changed delay:500ms, search"
+                       hx-target="#search-results"
+                       hx-indicator=".htmx-indicator">
+            </div>
+
+        </div>
         {% if skills %}
         <div class="card" style="width: 18rem;">
               <ul class="list-group list-group-flush">
@@ -10,7 +29,14 @@
                       {{ skill.skill }}
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-primary" hx-post="{% url 'add_user_skill' skill.pk skill.skill %}">Add</button>
+                        <!-- todo: fix this later to remove the form post
+                        <button type="button" class="btn btn-primary" hx-post="{% url 'add_user_skill' skill.pk skill.skill %}">Add</button> -->
+                        <form action="{% url 'add_user_skill' skill.pk skill.skill %}" method="post">
+                            {% csrf_token %}
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary">Add</button>
+                            </div>
+                        </form>
                     </div>
                   </div>
                 </div>
