--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -17,7 +17,7 @@
               <div class="row row-cols-2">
                 <div class="col"><h5 class="card-title">{{ pii.first_name }} {{ pii.last_name }}</h5></div>
                 <div class="col d-flex justify-content-end">
-                  <a href="{% url 'edit_pii' %}"><button type="button" class="btn btn-primary mx-1"
+                  <a href="{% url 'edit_personalinfo' pii.pk %}"><button type="button" class="btn btn-primary mx-1"
                               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
                 </div>
               </div>
