Rename PersonalInformaitonForm to be used with both add and edit. Refactored education form.

--- a/website/templates/add_education.html
+++ b/website/templates/add_education.html
@@ -4,16 +4,18 @@
     <div class="row justify-content-center">
         <div class="col-lg-6">
             <h1>Add Education/Certifications</h1>
-            <form method="POST" action="{% url 'add_education' %}" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="mb-3">
-                    <input type="text" name="title" class="form-control" id="title" placeholder="Title">
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="description" class="form-control" id="description" placeholder="Description">
-                </div>
-                <button type="submit" class="btn btn-secondary">Save</button>
-            </form>
+                <form method="POST" action="{% url 'add_education' %}">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        {{ form.title }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.description }}
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-secondary">Save</button>
+                    </div>
+                </form>
         </div>
     </div>
 </div>
