Logic for editing personal information is working. Removed facebook from model.

--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -75,6 +75,9 @@
             <div class="card-header bg-secondary">
               <h3>Education / Certificates</h3>
             </div>
+            <div class="mt-2 ms-2">
+              <button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+            </div>
             <div class="card-body">
               {% for edu in edus %}
               <div class="row row-cols-2">
@@ -101,10 +104,11 @@
             <div class="card-header bg-secondary">
               <h3>Experience</h3>
             </div>
+            <div class="mt-2 ms-2">
+              <button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+            </div>
             <div class="card-body">
               <!-- start -->
-
-
 
               {% for exp in exps %}
               <div class="container">
