--- a/website/templates/add_personalinfo.html
+++ b/website/templates/add_personalinfo.html
@@ -10,99 +10,43 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-check">
-                            <input type="checkbox" name="recruiter" class="form-check-input" id="id_recruiter">
-                            <label class="form-check-label" for="id_recruiter">Recruiter</label>
+                            {{ form.recruiter }}
+                            <label class="form-check-label">Recruiter</label>
                         </div>
                     </div>
                 </div>
                 <div class="row g-3 mb-3">
                     <div class="col-md-6">
-                        <input type="text" name="first_name" class="form-control" required id="id_first_name" placeholder="First Name">
+                        {{ form.first_name }}
                     </div>
                     <div class="col-md-6">
-                        <input type="text" name="last_name" class="form-control" required id="id_last_name" placeholder="Last Name">
+                        {{ form.last_name }}
                     </div>
                 </div>
                 <div class="row g-3 mb-3">
                     <div class="col-md-6">
-                        <input type="text" name="city" class="form-control" required id="id_city" placeholder="City">
+                        {{ form.city }}
                     </div>
                     <div class="col-md-6">
-                        <select name="state" class="form-control">
-                            <option value="">Select a state</option>
-                            <option value="AL">Alabama</option>
-                            <option value="AK">Alaska</option>
-                            <option value="AZ">Arizona</option>
-                            <option value="AR">Arkansas</option>
-                            <option value="CA">California</option>
-                            <option value="CO">Colorado</option>
-                            <option value="CT">Connecticut</option>
-                            <option value="DE">Delaware</option>
-                            <option value="DC">District of Columbia</option>
-                            <option value="FL">Florida</option>
-                            <option value="GA">Georgia</option>
-                            <option value="HI">Hawaii</option>
-                            <option value="ID">Idaho</option>
-                            <option value="IL">Illinois</option>
-                            <option value="IN">Indiana</option>
-                            <option value="IA">Iowa</option>
-                            <option value="KS">Kansas</option>
-                            <option value="KY">Kentucky</option>
-                            <option value="LA">Louisiana</option>
-                            <option value="ME">Maine</option>
-                            <option value="MD">Maryland</option>
-                            <option value="MA">Massachusetts</option>
-                            <option value="MI">Michigan</option>
-                            <option value="MN">Minnesota</option>
-                            <option value="MS">Mississippi</option>
-                            <option value="MO">Missouri</option>
-                            <option value="MT">Montana</option>
-                            <option value="NE">Nebraska</option>
-                            <option value="NV">Nevada</option>
-                            <option value="NH">New Hampshire</option>
-                            <option value="NJ">New Jersey</option>
-                            <option value="NM">New Mexico</option>
-                            <option value="NY">New York</option>
-                            <option value="NC">North Carolina</option>
-                            <option value="ND">North Dakota</option>
-                            <option value="OH">Ohio</option>
-                            <option value="OK">Oklahoma</option>
-                            <option value="OR">Oregon</option>
-                            <option value="PA">Pennsylvania</option>
-                            <option value="RI">Rhode Island</option>
-                            <option value="SC">South Carolina</option>
-                            <option value="SD">South Dakota</option>
-                            <option value="TN">Tennessee</option>
-                            <option value="TX">Texas</option>
-                            <option value="UT">Utah</option>
-                            <option value="VT">Vermont</option>
-                            <option value="VA">Virginia</option>
-                            <option value="WA">Washington</option>
-                            <option value="WV">West Virginia</option>
-                            <option value="WI">Wisconsin</option>
-                            <option value="WY">Wyoming</option>
-                        </select>
+                        {{ form.state }}
                     </div>
                 </div>
                 <div class="mb-3">
-                    <input type="email" name="email" class="form-control" required id="id_email" placeholder="Email" maxlength="320">
+                    {{ form.email }}
                 </div>
                 <div class="mb-3">
-                    <input type="text" name="phone" class="form-control" id="id_phone" placeholder="Phone">
+                    {{ form.phone}}
                 </div>
                 <div class="mb-3">
-                    <input type="url" name="linked_in" class="form-control" id="id_linked_in" placeholder="LinkedIn Profile">
-                </div>
-                <div class="mb-3">
-                    <input type="url" name="facebook" class="form-control" id="id_facebook" placeholder="Facebook Profile">
+                    {{ form.linked_id }}
                 </div>
                 <div class="mb-3">
                     <label for="id_about" class="form-label">About</label>
                     <textarea name="about" class="form-control" required id="id_about" rows="4"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="id_profile_image" class="form-label">Profile Image</label>
-                    <input type="file" name="profile_image" class="form-control" accept="image/*" id="id_profile_image">
+                    <label class="form-label">Profile Image</label>
+                    {{ form.profile_image }}
                 </div>
                 <button type="submit" class="btn btn-secondary">Save</button>
             </form>
