--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -83,8 +83,9 @@
               <div class="row row-cols-2">
                 <div class="col"><h5>{{ edu.title }}</h5></div>
                 <div class="col d-flex justify-content-end">
-                  <button type="button" class="btn btn-primary mx-1"
-                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button>
+
+                  <a href="{% url 'edit_education' edu.pk %}"><button type="button" class="btn btn-primary mx-1"
+                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
                       <button type="button" class="btn btn-danger mx-1"
                               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
                 </div>
