--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -76,7 +76,7 @@
               <h3>Education / Certificates</h3>
             </div>
             <div class="mt-2 ms-2">
-              <button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+              <a href="{% url 'add_education' %}"><button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button></a>
             </div>
             <div class="card-body">
               {% for edu in edus %}
@@ -86,8 +86,8 @@
 
                   <a href="{% url 'edit_education' edu.pk %}"><button type="button" class="btn btn-primary mx-1"
                               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
-                      <button type="button" class="btn btn-danger mx-1"
-                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
+                  <a href="{% url 'delete_education' edu.pk %}"><button type="button" class="btn btn-danger mx-1"
+                                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
                 </div>
               </div>
               <p class="card-text">{{ edu.description }}</p>
