--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -106,7 +106,7 @@
               <h3>Experience</h3>
             </div>
             <div class="mt-2 ms-2">
-              <button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+              <a href="{% url 'add_experience' %}"><button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button></a>
             </div>
             <div class="card-body">
               <!-- start -->
@@ -127,10 +127,10 @@
                       {% endif %}
                   </div>
                   <div class="col d-flex justify-content-end  ">
-                      <button type="button" class="btn btn-primary mx-1"
-                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button>
-                      <button type="button" class="btn btn-danger mx-1"
-                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
+                      <a href="{% url 'edit_experience' exp.pk %}"><button type="button" class="btn btn-primary mx-1"
+                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
+                      <a href="{% url 'delete_experience' exp.pk %}"><button type="button" class="btn btn-danger mx-1"
+                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
                   </div>
                 </div>
 
