Added logic for skill section so users can add user skill and skill not in db and create it in the db.

--- a/website/templates/add_experience.html
+++ b/website/templates/add_experience.html
@@ -52,7 +52,7 @@
                     {{ form.task_four }}
                 </div>
                 <div class="mb-3">
-                    {{ form.task.five }}
+                    {{ form.task_five }}
                 </div>
                 <div class="mb-3">
                     {{ form.task_six }}
@@ -67,7 +67,7 @@
                     {{ form.task_nine }}
                 </div>
                 <div class="mb-3">
-                    {{ form.task_ten}}
+                    {{ form.task_ten }}
                 </div>
                 <button type="submit" class="btn btn-secondary">Save</button>
             </form>
