--- a/website/templates/edit_experience.html
+++ b/website/templates/edit_experience.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
-            <h1>Add Experience</h1>
+            <h1>Edit Experience</h1>
             <form method="POST" >
                 {% csrf_token %}
                 <div class="mb-3">
@@ -52,7 +52,7 @@
                     {{ form.task_four }}
                 </div>
                 <div class="mb-3">
-                    {{ form.task.five }}
+                    {{ form.task_five }}
                 </div>
                 <div class="mb-3">
                     {{ form.task_six }}
