--- a/website/templates/skill_search.html
+++ b/website/templates/skill_search.html
@@ -1,6 +1,6 @@
 <div>
         {% if skills %}
-        <div class="card" style="width: 18rem;">
+        <div class="card ms-2 mb-2" style="width: 18rem;">
               <ul class="list-group list-group-flush">
                 {% for skill in skills %}
                 <li class="list-group-item">
@@ -10,7 +10,7 @@
                           {{ skill.skill }}
                         </div>
                         <div class="col">
-                            <form action="{% url 'add_user_skill' skill.pk skill.skill %}" method="post">
+                            <form action="{% url 'add_user_skill' skill.pk skill.skill %}" method="POST">
                                 {% csrf_token %}
                                 <div class="col">
                                     <button type="submit"
@@ -24,6 +24,28 @@
                 </li>
                 {% endfor %}
               </ul>
+        </div>
+        {% endif %}
+
+        {% if skill_input %}
+        <div class="card ms-2 mb-2" style="width: 18rem;">
+            <div class="container text-center">
+            <div class="row mx-2 my-2">
+            <div class="col">
+              {{ skill_input }}
+            </div>
+            <div class="col">
+                <form action="{% url 'add_skill' skill_input %}" method="POST">
+                    {% csrf_token %}
+                    <div class="col">
+                        <button type="submit"
+                                class="btn btn-primary"
+                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Add</button>
+                    </div>
+                </form>
+            </div>
+            </div>
+                </div>
         </div>
         {% endif %}
 </div>
