--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -42,9 +42,16 @@
 
             <div class="card-body">
                 <div class="container text-center">
-                  <div class="row row-cols-4">
+                  <div class="row row-cols-5">
                     {% for skill in uskills %}
-                      <div class="col">{{ skill.skill_name }}</div>
+                      <div class="col bg-secondary mx-1 my-1 py-1 position-relative">
+                        {{ skill.skill_name }}
+                        <a href="{% url 'delete_user_skill' skill.id %}">
+                        <button
+                                type="button"
+                                class="btn btn-danger mx-1 float-end"
+                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">X</button></a>
+                      </div>
                     {% endfor %}
                   </div>
                 </div>
