--- a/website/templates/edit_education.html
+++ b/website/templates/edit_education.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% include 'user_navbar.html' %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
