--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -1,7 +1,7 @@
 <div class="container px-4 text-center">
      <div class="p-3">
-       <a href="/user_profile"><button type="button" class="btn btn-primary">My Profile</button></a>
-       <button type="button" class="btn btn-primary">My Portfolio</button>
-       <a href="{% url 'user_resume' user.pk %}"><button type="button" class="btn btn-primary">View Resume</button></a>
+        <a href="/user_profile"><button type="button" class="btn btn-primary">My Profile</button></a>
+        <a href="/portfolio/add"><button type="button" class="btn btn-primary">My Portfolio</button></a>
+        <a href="{% url 'user_resume' user.pk %}"><button type="button" class="btn btn-primary">View Resume</button></a>
      </div>
 </div>
