Add custom validators for title and description so it can be used for all forms with title and description fields.

--- a/website/templates/add_education.html
+++ b/website/templates/add_education.html
@@ -9,9 +9,15 @@
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.title }}
+                        {% for error in form.title.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         {{ form.description }}
+                        {% for error in form.description.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div>
                         <button type="submit" class="btn btn-secondary">Save</button>
