--- a/website/templates/edit_portfolio.html
+++ b/website/templates/edit_portfolio.html
@@ -10,17 +10,25 @@
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.title }}
+                        {% for error in form.title.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         {{ form.description }}
+                        {% for error in form.description.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         {{ form.website_link}}
+                        {% for error in form.website_link.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         {{ form.portfolio_image}}
                     </div>
-
                     <div>
                         <button type="submit" class="btn btn-secondary">Save</button>
                     </div>
