--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -26,6 +26,10 @@
                 <button type="submit" class="btn btn-secondary">Login</button>
               </div>
             </form>
+          <div>
+            <a href="/register"><button class="btn btn-secondary ml-2">Register</button></a>
+          </div>
+
 
         {% endif %}
       </div>
