--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -3,7 +3,15 @@
 
 {% if user.is_authenticated %}
 
-    <p>Place recruiter profile content here.</p>
+    <p>
+        1. Button to create new job posting<br />
+        2. Below the button have a table format of the job listings they have<br />
+        Table will have first last name, city, state, title, view resume
+    </p>
+
+    <div>
+        <button class="btn btn-primary">Create New Listing</button>
+    </div>
 
 {% endif %}
 {% endblock %}
