--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -10,7 +10,7 @@
     </p>
 
     <div>
-        <button class="btn btn-primary">Create New Listing</button>
+        <a href="/job/listing/add"><button class="btn btn-primary">Create New Listing</button></a>
     </div>
 
 {% endif %}
