--- a/website/templates/add_joblisting.html
+++ b/website/templates/add_joblisting.html
@@ -12,26 +12,44 @@
                     <div class="mb-3">
                         <label class="form-label">Title:</label>
                         {{ form.title }}
+                        {% for error in form.title.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Company:</label>
                         {{ form.company }}
+                        {% for error in form.company.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">City:</label>
                         {{ form.city }}
+                        {% for error in form.city.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">State:</label>
                         {{ form.state }}
+                        {% for error in form.state.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Job type:</label>
                         {{ form.job_type }}
+                        {% for error in form.job_type.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Location:</label>
                         {{ form.location }}
+                        {% for error in form.location.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Bottom Pay:</label>
@@ -44,6 +62,9 @@
                     <div class="mb-3">
                         <label class="form-label">About</label>
                         {{ form.about }}
+                        {% for error in form.about.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Responsibilities</label>
@@ -62,6 +83,9 @@
                     </div>
                     <div class="mb-3">
                         {{ form.skill_one }}
+                        {% for error in form.skill_one.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
                     </div>
                     <div class="mb-3">
                         {{ form.skill_two }}
