Added recruiter personal information section and got list of job listings working in table format.

--- a/website/templates/add_joblisting.html
+++ b/website/templates/add_joblisting.html
@@ -79,7 +79,11 @@
                         {{ form.benefits }}
                     </div>
                     <div>
-                        <p>To find the best candidates add the skills you are looking for.</p>
+                        <div class="form-text">
+                            To find the best candidates, add skills you are looking for. These are the same skills
+                            that job seekers have on their resume. Matching these skills with job seekers give you
+                            the best results.
+                        </div>
                     </div>
                     <div class="mb-3">
                         {{ form.skill_one }}
