--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -16,7 +16,7 @@
         <div class="row">
                 <div class="col-4">
                  <div class="card col4">
-                <div class="card-header bg-secondary">
+                <div class="card-header bg-dark" style="color: white">
                   <h3>Personal Information</h3>
                 </div>
                 <div class="card-body">
@@ -85,8 +85,8 @@
                                     <td class="table-danger text-center">In-Active</td>
                                     {% endif %}
                                     <td class="text-center">
-                                        <button type="button" class="btn btn-secondary mx-1"
-                              style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button>
+                                        <a href="{% url 'view_job' job.pk %}"><button type="button" class="btn btn-secondary mx-1"
+                                                           style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                                     </td>
                                     <td class="text-center">
                                         <button type="button" class="btn btn-primary mx-1"
