--- a/website/templates/edit_joblisting.html
+++ b/website/templates/edit_joblisting.html
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-6">
             <h1>Add Job Listing</h1>
-                <form method="POST" action="{% url 'add_job' %}">
+                <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label class="form-label">Active:</label>
